--- a/avgsong_/styles/styles.module.css
+++ b/avgsong_/styles/styles.module.css
@@ -1,29 +1,276 @@
 /* styles.module.css */
 
-.column-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Auto-fill with minimum 200px width */
-    gap: 20px;
-  }
+.columnContainer {
+  display: flex;
+  flex-direction: row; /* Change to a row direction */
+  align-items: center;
+  gap: 20px;
+  overflow-x: auto; /* Enable horizontal scrolling */
+  max-width: calc(100% - 40px); /* Adjust as needed */
+}
   
   .column {
-    background-color: white;
+    background-color: #1e293b;
     border-radius: 10px;
-    padding: 20px;
+    padding: 1%;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     width: 100%;
-    transition: transform 0.2s;
+    transition: transform 0.3s, background-color 0.3s ease;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 10px;
+    align-self: center;
+    z-index: 3;
   }
   
   .column:nth-child(odd) {
     margin-right: 10px;
   }
+  .column:nth-child(1) {
+    margin-top: 20px;
+    margin-right: 10px;
+  }
   
   .column:hover {
     transform: translateY(-5px);
+    background-color: #0d9488;
   }
-  .image {
-    width: 150px; /* Set the desired width */
-    height: 150px; /* Set the desired height */
-    object-fit: cover; /* Maintain aspect ratio and fill the container */
-  }
+
+/* styles.module.css */
+.playlistName {
+  font-size: medium;
+  font-weight: bold;
+  text-align: left;
+  /* display: flex; */
+  flex-direction: row; /* Change to column direction */
+  align-items: stretch;
+  align-self: start;
+  margin-bottom: 5px;
+}
+
+
+.songInfo {
+  padding-left: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch; /* Text aligned to the right */
+  align-self: left; /* Center vertically */
+}
+
+
+.songInfo {
+  padding-left: 10px;
+  /* padding-right: 10px; */
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  align-self: center;
+  margin-left: auto; /* Adjust as needed */
+  margin-right: auto; /* Adjust as needed */
+  text-align: center;
+}
+/* Styles for the playlist blocks */
+.playlistBlock {
+  display: flex;
+  align-items: stretch;
+  background-color: #f0f0f0;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  margin-left: 40px;
+  margin-right: 40px;
+
+}
+.playlistImageContainer {
+  position: relative; /* Add this */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.playlistImage:hover::after { /* Add this block */
+  content: attr(alt);
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  border-radius: 8px;
+  font-size: 14px;
+  text-align: center;
+  z-index: 1;
+}
+.playlistImageContainer:hover::after {
+  content: attr(data-playlist-name);
+  /* content: attr(alt); */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  border-radius: 8px;
+  font-size: 14px;
+  text-align: center;
+  z-index: 1;
+  /* visibility: ${({ hovered }) => (hovered ? 'visible' : 'hidden')};
+  opacity: ${({ hovered }) => (hovered ? 1 : 0)};*/
+  transition: visibility 0.5s, opacity 0.3s; 
+}
+.playlistInfoRow {
+  flex: 1;
+  flex-wrap: wrap;
+  white-space: nowrap;
+  display: flex;
+  align-items: left;
+}
+
+.playlistInfoRow p {
+  margin: 0;
+}
+
+.playlistGenreCount {
+  flex: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  align-items: flex-start;
+  align-self: start;
+}
+
+.topGenres {
+  flex: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.playlistImage {
+  max-width: 200px; 
+  height: auto;
+  border-radius: 8px;
+  align-self: center;
+  align-items: center;
+}
+
+/* .infoPanel {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: stretch;
+  margin-right: auto;
+  margin-left: auto;
+  
+} */
+
+.infoRow {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center; /* Vertically center the content */
+  align-self: center; /* Center the row within playlistBlock */
+  position: relative;
+}
+.infoRow img {
+  margin-right: 4px; /* Keep the image 4px from the left border */
+  margin-left: 4px; /* Keep the image 4px from the right border */
+}
+
+
+.topTrackColumn {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+
+  
+}
+.topTrackImage {
+  max-width: 200px; /* Adjust as needed */
+  max-height: 200px; /* Adjust as needed */
+  border-radius: 8px;
+  /* justify-content: center; */
+  flex-direction: row;
+  position: relative;
+  margin-left: 200px;
+  margin-right: 10px;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  align-self: left;
+  
+}
+.topTrackInfo {
+  display: flex;
+  flex-direction: row;
+  align-items: center; /* Text aligned to the right */
+  flex-wrap: wrap; /* Allow text to wrap */
+}
+
+.playlistTopGenres {
+  flex: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  align-items: flex-start;
+  align-self: start;
+}
+
+.playlistGenreCount,
+.playlistTopGenres {
+  flex: 1;
+  margin: 0;
+  align-items: flex-start;
+  align-self: start;
+}
+/* Style for the playlist image */
+.image {
+  /* Image takes up full width */
+  max-height: 150px; /* Adjust the maximum height */
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+/* Style for the playlist title */
+.playlistTitle {
+  font-weight: bold;
+  color: #1e293b; /* Adjust the color */
+  margin-bottom: 5px;
+}
+
+/* Style for the playlist info */
+.playlistInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+}
+.playlistsContainer {
+  /* display: flex; */
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 40px;
+  width: 100%;
+}
+/* styles.module.css */
+.playlistColumns {
+  content: attr(data-playlist-name);
+  display: flex;
+  flex-direction: row; /* Change to column direction */
+  align-items: center; /* Center vertically */
+  gap: 20px;
+  width: 100%;
+  
+}
+
+
+
