optimized python file

--- a/avgsong_/styles/Top200.module.css
+++ b/avgsong_/styles/Top200.module.css
@@ -1,8 +1,52 @@
 /* top200.module.css */
 .yearContainer {
     margin: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+    padding: 10px;
+    border-radius: 4px;
+    border-color: #e5e5e5;
+    background-color:#f1f5f9;
+    border-width: 1px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s, box-shadow 0.3s ease, background-color 0.3s ease;
   }
-  
+  .yearContainer:hover {
+    /* color: #0d9488; */
+    background-color: #e5e5e5;
+    transform: translate(0, -5px);
+  }
+  .headingBar {
+    display: flex;
+    padding: 5px;
+    justify-content: space-between;
+    align-self: center;
+    margin-bottom: 10px;
+    color: white;
+    border-radius: 6px 6px 0 0;
+    background-color: #1e293b;
+    margin-left: -12px;
+    margin-right: -12px;
+    margin-top: -12px;
+    margin-bottom: 12px;
+    border-width: 1px;
+    border-color: black;
+    height: 15%;
+    text-align: left;
+    box-shadow: 0 4px 2px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s, box-shadow 0.3s ease, background-color 0.3s ease, color 0.3s ease;
+  }
+  .headingBar:hover{
+    background-color: #1e293b;
+    
+    
+    color: #0d9488;
+  }
+
+  .yearContainer:hover .headingBar {
+    background-color: #0d9488;
+    border-color: #0d9488;
+  }
   .albumContainer {
     display: flex;
     flex-wrap: wrap;
@@ -35,11 +79,16 @@
     bottom: -100%; /* Slide up */
     left: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    background: #1e293b;
+    opacity: 0.95;
     color: white;
+    font-weight: 40000;
     padding: 10px;
-    border-radius: 8px;
+    border-radius: 4px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
     transition: bottom 0.3s;
+    border-color: #1e293b;
+    border-width: 2px;
   }
   
   .imageContainer.hovered .albumOverlay {
