--- a/avgsong_/styles/styles.module.css
+++ b/avgsong_/styles/styles.module.css
@@ -73,20 +73,30 @@
 .playlistBlock {
   display: flex;
   align-items: stretch;
-  background-color: #f0f0f0;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
+  /* background-color: #e5e5e5; */
+  border-color: #e5e5e5;
+  border-width: 1px;
+  padding: 15px;
+  border-radius: 6px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  
+  margin-bottom: 30px;
   margin-left: 40px;
   margin-right: 40px;
-
+  transition: transform 0.3s, box-shadow 0.3s ease, background-color 0.3s ease;
 }
+.playlistBlock:hover {
+  transform: translateY(-5px);
+  transition: transform 0.3s;
+  background-color: #f3f4f6;
+}
+
 .playlistImageContainer {
   position: relative; /* Add this */
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: 100000;
 }
 .playlistImage:hover::after { /* Add this block */
   content: attr(alt);
@@ -103,28 +113,34 @@
   font-size: 14px;
   text-align: center;
   z-index: 1;
+  border-color: #1e293b;
+  border-width: 2px;
 }
 .playlistImageContainer:hover::after {
   content: attr(data-playlist-name);
   /* content: attr(alt); */
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 153px;
+  left: 0px;
   width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.7);
+  height: 25%;
+  background: #1e293b;
+  opacity: 0.95;
   color: white;
+  font-weight: 40000;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
-  border-radius: 8px;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   font-size: 14px;
   text-align: center;
   z-index: 1;
   /* visibility: ${({ hovered }) => (hovered ? 'visible' : 'hidden')};
   opacity: ${({ hovered }) => (hovered ? 1 : 0)};*/
   transition: visibility 0.5s, opacity 0.3s; 
+  /* transform: scale3d(1.1, 1.1, 1.1); */
 }
 .playlistInfoRow {
   flex: 1;
@@ -156,9 +172,16 @@
 .playlistImage {
   max-width: 200px; 
   height: auto;
-  border-radius: 8px;
+  border-radius: 6px;
   align-self: center;
   align-items: center;
+  /* border-color: #1e293b;
+  border-width: 1px; */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.playlistImage:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s;
 }
 
 /* .infoPanel {
@@ -197,7 +220,7 @@
 .topTrackImage {
   max-width: 200px; /* Adjust as needed */
   max-height: 200px; /* Adjust as needed */
-  border-radius: 8px;
+  border-radius: 6px;
   /* justify-content: center; */
   flex-direction: row;
   position: relative;
@@ -207,8 +230,14 @@
   /* justify-content: center; */
   align-items: center;
   align-self: left;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   
 }
+.topTrackImage:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s;
+}
+
 .topTrackInfo {
   display: flex;
   flex-direction: row;
@@ -260,6 +289,7 @@
   flex-wrap: wrap;
   gap: 40px;
   width: 100%;
+  margin-top: 20px;
 }
 /* styles.module.css */
 .playlistColumns {
@@ -271,6 +301,8 @@
   width: 100%;
   
 }
+
+
 
 
 
